--- a/server/client/package.json
+++ b/server/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "form": "^0.2.4",
     "form-control": "^1.0.0",
     "lodash": "^4.17.15",
