--- a/server/client/package.json
+++ b/server/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "form": "^0.2.4",
     "form-control": "^1.0.0",
     "lodash": "^4.17.15",
@@ -12,6 +13,7 @@
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
