--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "mongoose": "^5.7.12",
     "passport": "^0.4.0"
   }
