--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,12 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
