--- a/server/client/package.json
+++ b/server/client/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-actions": "^2.6.5"
+    "redux-actions": "^2.6.5",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
