--- a/server/client/package.json
+++ b/server/client/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "startbootstrap-simple-sidebar": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2"
+  }
 }
