--- a/server/client/package.json
+++ b/server/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
+    "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0"
   },
   "scripts": {
