--- a/server/client/package.json
+++ b/server/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/button": "^4.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
+    "font-awesome": "^4.7.0",
     "form": "^0.2.4",
     "form-control": "^1.0.0",
     "lodash": "^4.17.15",
