--- a/server/client/package.json
+++ b/server/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material/button": "^4.0.0",
+    "@material/top-app-bar": "^4.0.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.0",
     "font-awesome": "^4.7.0",
