--- a/server/client/package.json
+++ b/server/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
+    "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0",
     "startbootstrap-simple-sidebar": "^5.1.1"
   },
