--- a/server/client/package.json
+++ b/server/client/package.json
@@ -12,6 +12,7 @@
     "form-control": "^1.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "normalizr": "^3.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
